{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 664,
  "lineage": "071590d8-9731-1ce2-1161-ae0fd80a9314",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240693037076:security-group/sg-091863244c68e9782",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091863244c68e9782",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09550f5369842e056"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "opsschool-eks-v5PGGtZM20210109201809245200000009",
            "name_prefix": "opsschool-eks-v5PGGtZM",
            "owner_id": "240693037076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "opsschool-eks-v5PGGtZM-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e7123a835db7136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240693037076:security-group/sg-09550f5369842e056",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09550f5369842e056",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091863244c68e9782"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-091863244c68e9782"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "opsschool-eks-v5PGGtZM20210109201808503100000008",
            "name_prefix": "opsschool-eks-v5PGGtZM",
            "owner_id": "240693037076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "training",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "opsschool-eks-v5PGGtZM-eks_worker_sg",
              "kubernetes.io/cluster/opsschool-eks-v5PGGtZM": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e7123a835db7136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3123223591",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-091863244c68e9782",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2162248949",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-091863244c68e9782",
            "self": false,
            "source_security_group_id": "sg-09550f5369842e056",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240693037076:subnet/subnet-008ac4dbaa826d629",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.10.0/24",
            "id": "subnet-008ac4dbaa826d629",
            "map_public_ip_on_launch": false,
            "owner_id": "240693037076",
            "tags": {
              "Name": "Private Subnet 0- opsschool-vpc",
              "kubernetes.io/cluster/opsschool-eks-v5PGGtZM": "shared"
            },
            "vpc_id": "vpc-02e7123a835db7136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240693037076:subnet/subnet-09695f1012872c5a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.11.0/24",
            "id": "subnet-09695f1012872c5a0",
            "map_public_ip_on_launch": false,
            "owner_id": "240693037076",
            "tags": {
              "Name": "Private Subnet 1- opsschool-vpc",
              "kubernetes.io/cluster/opsschool-eks-v5PGGtZM": "shared"
            },
            "vpc_id": "vpc-02e7123a835db7136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:240693037076:vpc/vpc-02e7123a835db7136",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0bbe46e3ca4320bb3",
            "default_route_table_id": "rtb-0061ce03fa3495b2a",
            "default_security_group_id": "sg-0953f177cdb62ab4a",
            "dhcp_options_id": "dopt-b80965c2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02e7123a835db7136",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0061ce03fa3495b2a",
            "owner_id": "240693037076",
            "tags": {
              "Name": "opsschool-vpc-vpc"
            }
          }
        }
      ]
    }
  ]
}